# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Moderately AI Inc.

[package]
name = "squonk-sourcegen"
description = "Code generator (Spanned/Visit/Render skeleton, size asserts) for the squonk AST — a dev tool, never published"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Dev-only codegen toolchain. `publish = false` keeps these out of any shipped
# dep tree; the published `squonk-ast` crate gains nothing from them.
# `extra-traits` is omitted: no syn type is hashed/compared/`Debug`-printed here.
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
# Rewrites the `#[doc = "..."]` attributes the renderers emit (quote!/syn's only
# way to carry a doc comment) back into idiomatic `///` syntax, and produces
# well-formed input for the subsequent `rustfmt` pass (`format_generated`).
prettyplease = "0.2"
