# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Moderately AI Inc.

[package]
name = "squonk-wasm"
description = "WebAssembly bindings for parsing SQL with squonk in browser and edge runtimes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
autotests = false

[lints]
workspace = true

# A `cdylib` so the wasm32 build runs the final link step and emits a loadable
# module; the `rlib` lets the native mirror + wasm tests link the crate directly.
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Dialect-selection features carry a `dialect-` prefix (with `dialects-full` the
# all-dialects aggregate), unlike the core crates' bare `postgres`/`full`. Each
# forwards to the matching bare `squonk` feature.
dialect-postgres = ["squonk/postgres"]
dialect-mysql = ["squonk/mysql"]
dialect-sqlite = ["squonk/sqlite"]
dialect-duckdb = ["squonk/duckdb"]
dialect-quiltdb = ["squonk/quiltdb"]
dialect-bigquery = ["squonk/bigquery"]
dialect-hive = ["squonk/hive"]
dialect-clickhouse = ["squonk/clickhouse"]
dialect-databricks = ["squonk/databricks"]
dialect-mssql = ["squonk/mssql"]
dialect-snowflake = ["squonk/snowflake"]
dialect-redshift = ["squonk/redshift"]
dialect-lenient = ["squonk/lenient"]
dialects-full = [
  "dialect-postgres",
  "dialect-mysql",
  "dialect-sqlite",
  "dialect-duckdb",
  "dialect-quiltdb",
  "dialect-bigquery",
  "dialect-hive",
  "dialect-clickhouse",
  "dialect-databricks",
  "dialect-mssql",
  "dialect-snowflake",
  "dialect-redshift",
  "dialect-lenient",
]

[dependencies]
# The parser, with serialization and deserialization for the coherent document API.
# Dialect features opt into runtime-selectable
# built-ins (`BuiltinDialect::from_name`). Deserialization and document rendering
# are always present so every published JS package exposes one coherent API.
squonk = { workspace = true, features = ["serde-serialize", "serde-deserialize", "document-render"] }
serde = { workspace = true }

# `#[wasm_bindgen]` + `JsValue` for the JS-callable exports. wasm-only: the wrapper
# module is `cfg(target_arch = "wasm32")`, so a native build never pulls the macro
# crate (the target-agnostic `core` module carries the whole implementation).
# Pinned to =0.2.108 to match the installed wasm-bindgen-test-runner (the runner
# must equal the crate version) and the wasm-bindgen-test dev-dep below.
[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = "=0.2.108"

# wasm-only: the `#[wasm_bindgen_test]` harness for the runtime proof. 0.3.58 pins
# wasm-bindgen =0.2.108, matching the installed runner.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.58"

[dev-dependencies]
serde_json = { workspace = true }

[[test]]
name = "integration"
path = "tests/main.rs"
